app/assets/stylesheets/levels.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";

.scrollable {
  overflow: auto;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
}
.scrollable * {
  -webkit-transform: translate3d(0,0,0);
}

:root {
  --main-background-color: #8be0de;
  --main-background-text-color: white;
  --main-border-color: var(--main-background-color); //#8be0de;
  --main-text-color: black;
  --unchoosable-color: #f4f4f4;
  --choices-background-color: white;
  --highlight-color: var(--main-background-color); //#8be0de;
  --choosable-hover-color: white;
  --modal-backdrop-color: rgb(204, 204, 204);
  --box-shadow-color: #e8f8ff;
  --word-choice-color: var(--complete-highlight-color);
  --word-choice-hover-color: var(--complete-highlight-color);
  --definition-color: #aaa;
  --complete-highlight-color: rgb(50, 163, 202);

  // --main-background-color: black;
  // --main-background-text-color: orange;
  // --main-border-color: orange;
  // --main-text-color: white;
  // --unchoosable-color: #f4f4f4;
  // --choices-background-color: white;
  // --highlight-color: black;
  // --choosable-hover-color: white;
  // --modal-backdrop-color: #5c5c5c;
  // --box-shadow-color: rgb(255, 235, 200);
  // --word-choice-color: orange;
  // --word-choice-hover-color: rgb(177, 136, 90);
  // --definition-color: #aaa;
  // --complete-highlight-color: rgb(165, 78, 7);
}

.start_word, .target_word {
  position: fixed;
  z-index: 999;
  font-size: 6vh;
  line-height: 10vh;
  height: 10vh;
  z-index: 999;
  width: 100%;
  background-color: var(--main-background-color);
  color: var(--main-background-text-color);
  letter-spacing: 10px;
  left: 0;
}

.start_word {
  top: 0;
}

.target_word {
  bottom: 0;
}

#start, #target {
  span {
    width: 7vh;
    display: inline-block;
    letter-spacing: 0;
  }
}

.curr_word_container {
  opacity: 0;
}

.curr_word {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 100%;
  transform: translate(-50%, -50%);
  .btn {
    width: 7vh;
    line-height: 7vh;
    margin: 0px 1px;
    padding: 0;
    font-weight: bold;
    font-size: 5vh;
  }
  .choosable {
    border: 1px solid var(--main-border-color);
  }
  .choosable:hover {
    background-color: var(--main-border-color);
    color: var(--choosable-hover-color);
  }
  .unchoosable {
    border: 1px solid var(--unchoosable-color);
    cursor: default !important;
  }
  .complete {
    color: var(--main-background-color);
    font-size: 9vh;
    width: 9vh;
    line-height: 9vh;
  }
}

.curr_word_letter_container {
  position: relative;
  height: 7vh;
  width: 7vh;
  display: inline-block;
}

.reorder_btn {
  position: absolute;
  top: 0;
  left: calc(7vh + 5px);
  color: var(--main-border-color);
  font-size: 5vh;
  height: 7vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.modal-backdrop {
  background-color: var(--modal-backdrop-color);
  opacity: 0.8 !important;
}

.choices {
  @media (min-width: 768px) {
    .modal-dialog{
      position: relative;
      display: table; /* This is important */ 
      overflow-y: auto;    
      overflow-x: auto;
      width: auto;
      min-width: 10px;   
    }
  }
  .modal-content, .modal-body {
    background-color: transparent;
    -webkit-box-shadow: 0 0px 0px rgba(0,0,0,0);
    box-shadow: 0 0px 0px rgba(0,0,0,0);
    border-width: 0px;
    padding: 0;
  }
  .next_word {
    height: 9vh;
    line-height: 9vh;
    margin: 0px 5px;
    padding: 0;
    font-weight: bold;
    font-size: 5vh;
    border: 1px solid var(--main-border-color);
    margin: 10px auto;
    padding: 0px 10px;
    opacity: 1;
    background-color: var(--choices-background-color);
  }
  .next_word_container {
    background-color: none;
    .next_word_letter {
      margin: 0;
      display: inline-block;
      width: 5vh;
    }
    .next_word_letter:last-child {
    }
    .highlight {
      color: var(--highlight-color);
    }
    a:link, a:visited {
      color: var(--word-choice-color);
    }
    .next_word:hover {
      color: var(--word-choice-hover-color);
    }
  }	
}

.history {
  position: fixed;
  top: 23%;
  left: 50%;
  width: 50%;
  transform: translate(-50%, -50%);
  span {
    display: block;
    margin: 5px auto;
    letter-spacing: 10px;
    padding-left: 10px;
  }
  .glyphicon-option-vertical {
    color: #eee;
    padding-left: 20px;
    font-size: 3vh
  }
  .last_0 {
    display: none;
  }
  .last_1 {
    font-size: 4.2vh;
    color: #ccc;
  }
  .last_2 {
    font-size: 3.8vh;
    color: #ddd;
  }
  .last_3 {
    font-size: 3.6vh;
    color: #ececec;
  }
  .last_4 {
    font-size: 3.4vh;
    color: #ededed;
  } 
  .last_5 {
    font-size: 3.4vh;
    color: #eee;
  }
  .last_6 {
    font-size: 3.4vh;
    color: #efefef;
  }

}

.reset, .limit_count {
  position: fixed;
  top: 11vh;
}

.reset {
  right: 5px;
  font-size: 4vh;
  color: #ccc;
  a:active, a:link, a:visited {
    color: #ccc;
  }
  a:hover, .options_btn:hover {
    color: var(--main-background-color);
  }
  .options_btn {
    cursor: pointer;
  }
}

.limit_count {
  left: 10px;
  color: var(--main-background-color);
  opacity: 0.8;
  .limit_dot {
    width: 4vh;
    height: 5vh;
    text-align: center;
    font-size: 4vh;
    display: block;
  }
  .glyphicon-triangle-bottom {
    font-size: 2.5vh;
    padding-top: 0.5vh;
  }
}

.below_curr_word {
  position: fixed; 
  width: 100%;
}

.definition {
  width: 100%;
  .definition_content {
    padding: 40px;
    max-width: 800px;
    color: var(--definition-color);
    opacity: 0.7;
    text-align: center;
    font-size: 2vh;
    white-space: pre-wrap;
    margin: 0 auto;
  }
}

.no_moves_left {
  width: 100%;
  text-align: center;
  color: var(--main-background-color);
  font-weight: bold;
  font-size: 2.5vh;
}
/* ... */

